tests/errors/ptr_attr_disallow.f90
program main
    implicit none
    integer, pointer, parameter :: v => null()
 end program